# dynamical-planner

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
include/DynamicalPlanner/: Control.h  Logger.h  PositionReferenceGenerator.h  RectangularFoot.h  Settings.h  Solver.h  State.h  Utilities.h  Visualizer.h
include/DynamicalPlannerPrivate/: CentroidalMomentumConstraint.h  CoMPositionConstraint.h  Constraints.h  ContactForceControlConstraints.h  ContactFrictionConstraint.h  ContactPositionConsistencyConstraint.h  ContactVelocityControlConstraints.h  Costs.h  DynamicalComplementarityConstraint.h  DynamicalConstraints.h  FeetLateralDistanceConstraint.h  ForceMeanCost.h  FrameOrientationCost.h  HyperbolicSecant.h  HyperbolicTangent.h  MeanPointPositionCost.h  NormalVelocityControlConstraints.h  PlanarVelocityControlConstraints.h  QuaternionNormConstraint.h  QuaternionUtils.h  SharedKinDynComputations.h  SmoothingFunction.h  StaticTorquesCost.h  SwingCost.h  TimelySharedKinDynComputations.h  VariablesLabeller.h
include/DynamicalPlannerPrivate/Constraints/: CentroidalMomentumConstraint.h  ClassicalComplementarityConstraint.h  ClassicalPlanarComplementarityConstraint.h  CoMPositionConstraint.h  ContactForceControlConstraints.h  ContactFrictionConstraint.h  ContactPositionConsistencyConstraint.h  DynamicalComplementarityConstraint.h  DynamicalConstraints.h  FeetLateralDistanceConstraint.h  FeetRelativeHeightConstraint.h  NormalVelocityControlConstraints.h  PlanarVelocityControlConstraints.h  QuaternionNormConstraint.h
include/DynamicalPlannerPrivate/Costs/: CoMVelocityCost.h  ComplementarityCost.h  (+11 more)
include/private/: CentroidalMomentumConstraint.h  CheckEqualVector.h  CoMPositionConstraint.h  ContactFrictionConstraint.h  ContactPositionConsistencyConstraint.h  DynamicalConstraints.h  FeetLateralDistanceConstraint.h  QuaternionNormConstraint.h  QuaternionUtils.h  SharedKinDynComputations.h  SpanUtils.h  VariablesLabeller.h
src/: CentroidalMomentumConstraint.cpp  CoMPositionConstraint.cpp  CoMVelocityCost.cpp  ContactForceControlConstraints.cpp  ContactFrictionConstraint.cpp  ContactPositionConsistencyConstraint.cpp  ContactVelocityControlConstraints.cpp  Control.cpp  DynamicalComplementarityConstraint.cpp  DynamicalConstraints.cpp  FeetLateralDistanceConstraint.cpp  ForceMeanCost.cpp  FrameOrientationCost.cpp  HyperbolicSecant.cpp  HyperbolicTangent.cpp  Logger.cpp  MeanPointPositionCost.cpp  NormalVelocityControlConstraints.cpp  PhantomForcesCost.cpp  PlanarVelocityControlConstraints.cpp  PositionReferenceGenerator.cpp  QuaternionNormConstraint.cpp  QuaternionUtils.cpp  RectangularFoot.cpp  Settings.cpp  SharedKinDynComputations.cpp  SmoothingFunction.cpp  Solver.cpp  State.cpp  StaticTorquesCost.cpp  SwingCost.cpp  TimelySharedKinDynComputations.cpp  Utilities.cpp  VariablesLabeller.cpp  Visualizer.cpp
src/private/: AbsoluteVelocityExpression.cpp  AdjointTransformExpression.cpp  CentroidalMomentumConstraint.cpp  ClassicalComplementarityConstraint.cpp  ClassicalPlanarComplementarityConstraint.cpp  CoMInBaseExpression.cpp  CoMPositionConstraint.cpp  CoMPositionExpression.cpp  CoMVelocityCost.cpp  ComplementarityCost.cpp  ContactForceControlConstraints.cpp  ContactFrictionConstraint.cpp  ContactPositionConsistencyConstraint.cpp  DynamicalComplementarityConstraint.cpp  DynamicalConstraints.cpp  ExpressionsServer.cpp  FeetDistanceCost.cpp  FeetLateralDistanceConstraint.cpp  FeetRelativeHeightConstraint.cpp  FootYawCost.cpp  ForceMeanCost.cpp  ForceRatioCost.cpp  FrameAngularVelocityCost.cpp  FrameOrientationCost.cpp  HyperbolicSecant.cpp  HyperbolicTangent.cpp  JointsVelocityForPosturalCost.cpp  MeanPointPositionCost.cpp  MomentumInBaseExpression.cpp  NormalVelocityControlConstraints.cpp  PhantomForcesCost.cpp  PlanarVelocityControlConstraints.cpp  QuaternionErrorExpression.cpp  QuaternionExpressions.cpp  QuaternionNormConstraint.cpp  QuaternionUtils.cpp  RelativeJacobianExpression.cpp  RelativePositionExpression.cpp  RelativeQuaternionExpression.cpp  RelativeVelocityExpression.cpp  (+5 more)
test/: BoundsAndSparsityTest.cpp  CMakeLists.txt  ConstraintsDerivativeTest.cpp  CostsDerivativeTest.cpp  LoggerTest.cpp  MomentumDerivativeTest.cpp  PerformanceTest.cpp  QuaternionDerivativeTest.cpp  RectangularFootTest.cpp  SolverForComparisonsTest.cpp  SolverTest.cpp  SolverTest.cpp.autosave  StaticForcesDerivativeTest.cpp  TranscriptionTest.cpp  VariablesLabellerTest.cpp  leviExpressionsTest.cpp
test/data/: iCubGenova04.urdf
test/data/meshes/: sim_sea_2-5_chest_bb_prt-binary.dae  sim_sea_2-5_head_prt-binary.dae  sim_sea_2-5_l_ankle_prt-binary.dae  sim_sea_2-5_l_elbow_prosup_prt-binary.dae  sim_sea_2-5_l_elbow_prt-binary.dae  sim_sea_2-5_l_foot_prt-binary.dae  sim_sea_2-5_l_forearm_prt-binary.dae  sim_sea_2-5_l_hand_prt-binary.dae  sim_sea_2-5_l_hip_1_prt-binary.dae  sim_sea_2-5_l_hip_2_prt-binary.dae  sim_sea_2-5_l_shank_prt-binary.dae  sim_sea_2-5_l_shoulder_1_prt-binary.dae  sim_sea_2-5_l_shoulder_2_prt-binary.dae  sim_sea_2-5_l_sole_prt-binary.dae  sim_sea_2-5_l_thigh_prt-binary.dae  sim_sea_2-5_l_upper_arm_prt-binary.dae  sim_sea_2-5_l_upper_thigh_prt-binary.dae  sim_sea_2-5_l_wrist_pitch_prt-binary.dae  sim_sea_2-5_lap_belt_1_prt-binary.dae  sim_sea_2-5_lap_belt_2_prt-binary.dae  sim_sea_2-5_neck_1_prt-binary.dae  sim_sea_2-5_neck_2_prt-binary.dae  sim_sea_2-5_r_ankle_prt-binary.dae  sim_sea_2-5_r_elbow_prosup_prt-binary.dae  sim_sea_2-5_r_elbow_prt-binary.dae  sim_sea_2-5_r_foot_prt-binary.dae  sim_sea_2-5_r_forearm_prt-binary.dae  sim_sea_2-5_r_hand_prt-binary.dae  sim_sea_2-5_r_hip_1_prt-binary.dae  sim_sea_2-5_r_hip_2_prt-binary.dae  sim_sea_2-5_r_shank_prt-binary.dae  sim_sea_2-5_r_shoulder_1_prt-binary.dae  sim_sea_2-5_r_shoulder_2_prt-binary.dae  sim_sea_2-5_r_sole_prt-binary.dae  sim_sea_2-5_r_thigh_prt-binary.dae  sim_sea_2-5_r_upper_arm_prt-binary.dae  sim_sea_2-5_r_upper_thigh_prt-binary.dae  sim_sea_2-5_r_wrist_pitch_prt-binary.dae  sim_sea_2-5_root_link_prt-binary.dae
test/matlab/: plot_propelled_mass_output.m  propelled_mass.m  solve_propelled_mass.m
(+21 files in other folders)
